--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
             <button id="subtract">-</button>
             <button id="multiply">X</button>
             <button id="divide">/</button>
+        </div>
+
+        <div class="otherButs">
             <button id="equals">=</button>
             <button id="clear">clr</button>
         </div>
